fix toolbar icon alignment on mobile

--- a/src/livecodes/styles/app.scss
+++ b/src/livecodes/styles/app.scss
@@ -912,6 +912,7 @@ a#result-button {
     .toolbar-render {
       justify-content: space-between;
       place-items: center;
+      padding-top: var(--s4);
     }
 
     #select-editor {
